2006-06-29  Mo DeJong  <mdejong@users.sourceforge.net>

        Fixup build/tests with JDK 1.5. The DupTest class
        does not even compile with JDK 1.5, so just
        remove this strange edge case.

        * Makefile.in:
        * src/tcljava/tcl/lang/reflect/PkgInvoker.java
        (getPkgInvoker): Check for null before invoking
        loadClass, this makes the common fail case faster
        when null is returned for the class loader.
        * src/tests/tcljava/tests/DupTest.java:
        * src/tests/tcljava/tests/InnerTest/DupName.java:
        * src/tests/tcljava/tests/InnerTest/DupTest.java:
        * src/xputils/xputils.tcl: Update error message
        for JDK 1.4 or newer.
        * tests/tcljava/FuncSig.test: Test JDK version
        at runtime and match object signature so that
        test passes in JDK 1.5.
        * tests/tcljava/JavaNewCmd.test: Remove DupName
        test since it does not compiled with JDK 1.5.

2006-06-29  Mo DeJong  <mdejong@users.sourceforge.net>

        Require JDK 1.4 or newer to build Jacl or Tcl Blend.

        * bsjavac.sh: Remove old shell script that worked
        around buggy JDK 1.0/1.1 javac.
        * configure: Regen.
        * configure.in: Fixup default --prefix option,
        it will now correctly default to /usr/local.
        Remove AC_JAVA_WITH_KAFFE and AC_JAVA_WITH_JIKES.
        Remove old tests that checked for -native option
        to java, it existed only for old JDK 1.0/1.1.
        * tcljava.m4 (AC_JAVA_WITH_KAFFE, AC_JAVA_WITH_JIKES,
        AC_PROG_JAVAC, AC_JAVA_DETECT_JVM, AC_JAVA_CLASSPATH,
        AC_JAVA_TOOLS, AC_JAVA_JNI_LIBS):
        Remove ancient kaffe and jikes support. Detect
        JDK version as 1.4 or 1.5. Remove old code to detect
        CLASSPATH, this was only needed to work around
        CLASSPATH related bugs in JDK 1.0/1.1 tools.
        Remove old JNI lib search code, now depends on
        JDK 1.4 or 1.5 style install paths.
